solved bug in createproject: metadata now as JSON-LD
