# src/routes.ts
@@ -40,7 +40,7 @@ const models: TsoaRoute.Models = {
             "graphs": {"ref":"IResourceObject","required":true},
             "documents": {"ref":"IResourceObject","required":true},
             "permissions": {"dataType":"array","array":{"dataType":"string"}},
-            "queryResults": {"ref":"IQueryResults"},
+            "results": {"ref":"IQueryResults"},
         },
         "additionalProperties": false,
     },
@@ -59,9 +59,7 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "uri": {"dataType":"string","required":true},
-            "metadata": {"dataType":"string"},
-            "data": {"dataType":"union","subSchemas":[{"dataType":"buffer"},{"dataType":"string"}]},
-            "results": {"ref":"IQueryResults"},
+            "metadata": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -70,9 +68,9 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "uri": {"dataType":"string","required":true},
-            "metadata": {"dataType":"string"},
-            "data": {"dataType":"union","subSchemas":[{"dataType":"buffer"},{"dataType":"string"}]},
+            "data": {"ref":"IResourceObject"},
             "results": {"ref":"IQueryResults"},
+            "metadata": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
@@ -84,7 +82,7 @@ const models: TsoaRoute.Models = {
             "uri": {"dataType":"string","required":true},
             "email": {"dataType":"string","required":true},
             "password": {"dataType":"string"},
-            "tokens": {"dataType":"array","array":{"dataType":"string"},"required":true},
+            "tokens": {"dataType":"array","array":{"dataType":"string"}},
             "projects": {"dataType":"array","array":{"dataType":"string"},"required":true},
         },
         "additionalProperties": false,
